[gd_scene load_steps=8 format=3 uid="uid://coo8e5vjcprxg"]

[ext_resource type="Script" path="res://learning/learning.gd" id="1_xqwy1"]
[ext_resource type="Texture2D" uid="uid://b14xecnkxobno" path="res://learning/start.png" id="2_4mvmt"]
[ext_resource type="Script" path="res://learning/OneCycle.gd" id="3_77uqp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hkxv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nvxjl"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ds7nr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxjba"]
bg_color = Color(1, 0, 0, 1)

[node name="Learning" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_xqwy1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bars" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 0

[node name="CorrectBar" type="ProgressBar" parent="VBoxContainer/Bars"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_6hkxv")
theme_override_styles/fill = SubResource("StyleBoxFlat_nvxjl")
step = 1.0
rounded = true
show_percentage = false

[node name="WrongBar" type="ProgressBar" parent="VBoxContainer/Bars"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_ds7nr")
theme_override_styles/fill = SubResource("StyleBoxFlat_cxjba")
step = 1.0
rounded = true
fill_mode = 1
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("2_4mvmt")
expand_icon = true

[node name="Question" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<question>"

[node name="Answer" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "answer"

[node name="PrevPairs" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="NoFilesDialog" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(148, 100)
dialog_text = "No opened files!"

[node name="Modes" type="Node" parent="."]

[node name="OneCycle" type="Node" parent="Modes"]
script = ExtResource("3_77uqp")

[node name="Repeat" type="Node" parent="Modes"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
